--- a/package.json
+++ b/package.json
@@ -15,10 +15,10 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "postbuild": "node scripts/postbuild.js",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
-    "test": "react-scripts test"
+    "deploy": "gh-pages -d build"
   },
   "browserslist": {
     "production": [
